--- a/main.tex
+++ b/main.tex
@@ -102,12 +102,17 @@ At this stage in the study the application of transducers to an NGV is being ign
 The overarching research objective is to develop an online temperature monitoring system for jet engine nozzle guide vanes. This includes signal generation, data acquisition, and a signal processing system. Ideally, the system will be capable of monitoring temperature with a resolution, accuracy, and response time, comparable with traditional temperature monitoring systems. This requires the following challenges to be addressed:
 
 \subsection{Research questions}
-\itemize
-\item What is the impact of temperatures on the wave velocity of Lamb wave modes?
-\item What is the most suitable transducer configuration for attaching to nozzle guide vanes?
-\item How do cooling holes affect wave propagation? Can they be used to monitor temperature at multiple locations?
-\item How does the curved surface of NGVs affect wave propagation?
-   
+\begin{itemize}
+    \item What is the impact of temperature on the wave velocity of Lamb wave modes?
+    \item How can the temperature dependence of Lamb waves be utilised for temperature monitoring of NGVs?
+    \item What is the effect of the physical environment on the temperature monitoring system?
+\begin{itemize}
+    \item Cooling holes
+    \item Curved surfaces
+\end{itemize}
+    \item What is the most suitable transducer configuration for attaching to nozzle guide vanes?
+\end{itemize}
+  
 \subsection{Plans from 18 month review onwards}
 \begin{itemize}
     \item Investigating a method of mapping temperature across the surface of an NGV\@. It is suspected that the numerous cooling holes found across the surface of an NGV would provide acoustic reflections. The varying time of flight between each reflection could be used to monitor temperature at multiple locations. This will be investigated experimentally by introducing holes into a test plate, and modelled using COMSOL\@.
