update section 5 and gantt

--- a/main.tex
+++ b/main.tex
@@ -451,7 +451,9 @@ From the outcome of the literature review, a temperature monitoring system for n
 
 The multi-modal nature of Lamb waves makes their analysis complex, however this can be simplified by targeting specific modes using careful selection of excitation frequency, to target a particular frequency-thickness product. This difficulty can be seen in Figure~\ref{fig:multimode} where a large number of different modes combine to create a multi-modal wave packet. Individual modes can be further isolated through the use of angled wedges, where the angle is chosen to target a particular mode. 
 
+Below the cut--off frequency of the $A_1$ mode only the two fundamental modes ($A_0$ \& $S_0$) are present. Their phase/group velocities are sufficiently different from one another that the modes can be distinguished between in the time domain, assuming a long enough propagation distance. The use of wedge transducers can further isolate between the modes, as the wedge angle required to excite them are largely different. 
 
+Above the cut--off frequency of the $A_1$ mode there are an increasing number of modes present. The relatively small difference in phase velocity between the higher order pairs ($A_1$ \& $S_1$, $A_2$ \& $S_2$, etc.) means that even with the use of wedge transducers it is not possible to selectively excite only one mode. The ability to differentiate between the modes is improved by targeting points of group velocity minima/maxima, where the modes are travelling with the largest differences in velocity, which helps to separate them in the time domain.
 
 \begin{figure}[!htbp]
     \centering
@@ -528,19 +530,15 @@ Pressure at both transmitter and receiver wedge boundaries are exported, and the
 
 \chapter{Experimental investigation of Lamb wave temperature sensitivity}\label{experiments}
 
-\section{S0 mode temperature sensitivity}\label{S0 experiments}
+The wave velocity temperature sensitivity of three Lamb wave modes have been experimentally measured, to be validated against theoretical predictions.
 
-The $S_0$ Lamb wave mode has been excited in an aluminium plate using a piezoelectric transducer attached to an acrylic wedge (Olympus variable angle wedge), which is coupled to the plate with a liquid couplant (Figures~\ref{fig:testdiagram} \&~\ref{fig:testsetup}). The wedge allows careful selection of excitation angle so that only the $S_0$ mode is excited. The angle is determined based on Snell’s law:
+Two 1 MHz piezoelectric transducers attached to acrylic wedges (Olympus variable angle wedge) in a pitch-catch configuration have been coupled to a 1~mm thick aluminium with a liquid couplant (Figures~\ref{fig:testdiagram} \&~\ref{fig:testsetup}). The wedges allow for careful selection of excitation angle so that modes of interest can be targeted. The angle is determined based on Snell’s law:
 %
 \begin{equation} 
 \text{Angle}\ \theta = \text{Sin}^{- 1} \left( \frac{\text{Longitudinal\ wedge\ velocity}}{\text{Lamb\ wave\ phase\ velocity}} \right)
 \end{equation} 
 %
-\begin{equation} 
-31{^\circ} = \text{Sin}^{- 1} \left( \frac{2720}{5258} \right)
-\end{equation} 
-%
-The $A_0$ mode cannot be excited using this method as it’s phase velocity at this frequency (2312 m s$^{-1}$) is slower than the longitudinal velocity of the wedge. If the $A_0$ mode is present in the signal it will not affect measurement of the $S_0$ mode as it’s group velocity is significantly different than that of the $S_0$ mode, which will cause a distinct second wave packet. A signal generator (Hewlett Packard 33120A) has been used to generate a 10-cycle tone burst at 1~MHz, which is transmitted through the plate and received by an identical transducer and wedge in a pitch-catch configuration. Time of flight ($t_F$) has been calculated from the Equation~\cite{Croxford2007a}:
+Measurement of wave velocity depends on measurement of time of flight ($t_F$), which can be described by the Equation~\cite{Croxford2007a}:
 %
 \begin{equation}\label{tofcalc}
 t_F = \frac{d}{c}
@@ -558,8 +556,7 @@ Where $\alpha$ is the coefficient of thermal expansion of the medium and $k$ is 
 k = \frac{\delta \text{c}}{\delta \text{T}}
 \end{equation} 
 %
-
-Time of flight ($t_F$) is measured between transducers using a cross-correlation function, and wave velocity is calculated from the distance between transducers. Based on a sampling rate of 5 $\times$ 10$^8$ the theoretical maximum temporal resolution is 2 ns. This is equal to a velocity resolution of $\pm$ 0.35 m s$^{-1}$. The propagation time through the wedges at each temperature has been subtracted from the total $t_F$ to ensure that only the propagation time through the plate is measured. Wave velocity is calculated using Equation~\ref{velocitycalc}/\ref{velocitycalcfull}. 
+A signal generator (Hewlett Packard 33120A) has been used to generate a 10-cycle tone burst at 1~MHz. Time of flight ($t_F$) is measured between transducers using a cross-correlation function, and wave velocity is calculated from the distance between transducers. Based on a sampling rate of 5 $\times$ 10$^8$ the theoretical maximum temporal resolution is 2 ns. This is equal to a velocity resolution of $\pm$ 0.35 m s$^{-1}$. The propagation time through the wedges at each temperature has been subtracted from the total $t_F$ to ensure that only the propagation time through the plate is measured. Wave velocity is calculated using Equation~\ref{velocitycalc}/\ref{velocitycalcfull}. 
 %
 \begin{equation} \label{velocitycalc}
 v = \frac{d}{t_F}
@@ -574,12 +571,6 @@ Where the $d$ wedge foot offset is 0.0425 m. Measurements have been carried out 
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=.8\textwidth]{./figures/waveformxcorr.eps}
-    \caption{Time of flight ($t_F$) measurement using cross-correlation function at room temperature.}\label{fig:waveforms}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
     \includegraphics[width=.8\textwidth]{./figures/testdiagramsimple.eps}
     \caption{Cross-sectional diagram of test setup.}\label{fig:testdiagram}
 \end{figure}
@@ -590,13 +581,29 @@ Where the $d$ wedge foot offset is 0.0425 m. Measurements have been carried out 
     \caption{Photograph of test setup.}\label{fig:testsetup}
 \end{figure}
 
-\subsection{Test Method}
+\section{Test Method}
 
-The temperature of the hot plate is raised to the desired temperature. The temperature of the aluminium plate is monitored using thermocouples. The total $t_F$ is measured until it stabilises. The temperature of the entire system must be allowed to stabilise before taking the measurement to ensure that the temperature of the wedge is the same as the plate. Total $t_F$ is now measured for the set temperature. Multiple measurements are taken after adjusting wedge position. Wedges are removed from the surface and placed together to measure the wedge-to-wedge $t_F$. Multiple measurements are taken after adjusting wedge position. The $t_F$ measurement process is repeated after allowing the total $t_F$ to re-stabilise. Velocity is calculated using Equation~\ref{velocitycalcfull}. A mean average is calculated from the results of the repeated total $t_F$ measurements, and velocity is calculated for every wedge-to-wedge result. An average velocity is calculated along with standard deviation. Results are shown in Figure~\ref{fig:result}.
+A hot plate is used to raise the temperature of the aluminium plate to the desired temperature. The temperature of the aluminium plate is monitored using thermocouples. The total $t_F$ is measured until it stabilises. The temperature of the entire system must be allowed to stabilise before taking the measurement to ensure that the temperature of the wedge is the same as the plate. Total $t_F$ is now measured for the set temperature. Multiple measurements are taken after adjusting wedge position. Wedges are removed from the surface and placed together to measure the wedge-to-wedge $t_F$. Multiple measurements are taken after adjusting wedge-to-wedge position. The $t_F$ measurement process is repeated after allowing the total $t_F$ to re-stabilise. Velocity is calculated using Equation~\ref{velocitycalcfull}. A mean average is calculated from the results of the repeated total $t_F$ measurements, and velocity is calculated for every wedge-to-wedge result. An average velocity is calculated along with standard deviation. 
 
-The temperature gradient across the plate has been measured by placing four equally spaced thermocouples along the transmission path, from the centre of the plate to the furthest edge of the wedge transducer in 3 cm increments. The gradient is assumed to be the same on both sides of the plate. The gradient is shown to be almost linear (r$^2$=0.9967) across this distance. An average temperature has been calculated for the total transmission path at each hot plate temperature setting. 
+The temperature gradient across the plate has been measured by placing four equally spaced thermocouples along the transmission path, from the centre of the plate to the furthest edge of the wedge transducer in 3 cm increments. The gradient is assumed to be the same on both sides of the plate. An average temperature has been calculated for the total transmission path at each hot plate temperature setting. 
 
-\subsection{Results}
+\section{S0 mode (1 MHz-mm)}\label{S0 experiments}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.8\textwidth]{./figures/waveformxcorr.eps}
+    \caption{Time of flight ($t_F$) measurement using cross-correlation function at room temperature.}\label{fig:waveforms}
+\end{figure}
+%
+The wedge angle required for the $S_0$ mode is:
+%
+\begin{equation} 
+31{^\circ} = \text{Sin}^{- 1} \left( \frac{2720}{5258} \right)
+\end{equation} 
+%
+The $A_0$ mode cannot be excited using this method as it’s phase velocity at this frequency (2312 m s$^{-1}$) is slower than the longitudinal velocity of the wedge. If the $A_0$ mode is present in the signal it will not affect measurement of the $S_0$ mode as it’s group velocity is significantly different than that of the $S_0$ mode, which will cause a distinct second wave packet. 
+
+\subsection{S0 mode results}
 
 \begin{figure}[ht]
     \centering
@@ -604,9 +611,13 @@ The temperature gradient across the plate has been measured by placing four equa
     \caption{Group velocity change with temperature for the $S_0$ mode in Aluminium 1050 H14.}\label{fig:result}
 \end{figure}
 
-Figure~\ref{fig:result} shows experimentally measured wave velocity of the $S_0$ mode plotted against theoretical wave velocity extracted from dispersion curves. Error bars show the standard deviation from the mean. After accounting for the temperature gradient across the transmission path by calculating a temperature average the change in velocity is comparable with predicted velocity extracted from dispersion curves, within 4.89 $\pm$ 2.27 m s$^{-1}$ on average. The temperature sensitivity of the system is 1.26--1.78 m s$^{-1}$\si{\degreeCelsius}$^{-1}$ over the range 24\si{\degreeCelsius}--94\si{\degreeCelsius}. The sensitivity is extracted from a second-order polynomial fit of the data (r$^2$ = 0.9992). The slope away from predicted results (increasing with temperature) can be attributed to the increasing temperature gradient, both in the plate and in the wedges. Increasing temperature is also likely to have an effect on the operation of the piezoelectric transducer (amplitude and centre frequency), however this effect is negligible over the tested temperature range. The wedge angle required to excite the $S_0$ mode will also vary with temperature, however the change is only around 1\si{\degree} between 20\si{\degreeCelsius} and 100\si{\degreeCelsius}.
+Figure~\ref{fig:result} shows experimentally measured wave velocity of the $S_0$ mode plotted against theoretical wave velocity extracted from dispersion curves. Error bars show the standard deviation from the mean. After accounting for the temperature gradient across the transmission path by calculating a temperature average the change in velocity is comparable with predicted velocity extracted from dispersion curves, within 4.89 $\pm$ 2.27 m s$^{-1}$ on average. The temperature sensitivity of the system is 1.26--1.78 m s$^{-1}$\si{\degreeCelsius}$^{-1}$ over the range 24\si{\degreeCelsius}--94\si{\degreeCelsius}. The sensitivity is extracted from a second-order polynomial fit of the data (r$^2$ = 0.9992). The slope away from predicted results (increasing with temperature) can be attributed to the increasing temperature gradient, both in the plate and in the wedges. The gradient is shown to be almost linear (r$^2$=0.9967) across the measurement distance. Increasing temperature is also likely to have an effect on the operation of the piezoelectric transducer (amplitude and centre frequency), however this effect is negligible over the tested temperature range. The wedge angle required to excite the $S_0$ mode will also vary with temperature, however the change is only around 1\si{\degree} between 20\si{\degreeCelsius} and 100\si{\degreeCelsius}.
 
-\subsection{Experimental sensitivity analysis}
+\section{A1 mode (2.5 MHz-mm)}
+
+\section{S1 mode (4 MHz-mm)}
+
+\section{Experimental sensitivity analysis}
 
 There are a number of experimental error sources to consider. The physical distance between wedges is controlled using 3D printed spacers that keep the wedges aligned at set distances. The movement of the wedges on the surface of the plate increases with temperature as the viscosity of the couplant decreases. Variations in placement cause the calculated velocity to vary by around $\pm$ 5 m s$^{-1}$ across multiple (30) wedge re-alignments. The measurement of wedge-to-wedge time to be subtracted from the total $t_F$ is temperature dependant and relies on accurate alignment of the wedge feet, as well as a good connection between them (signal amplitude is highly dependant on couplant). Variation in alignment causes around a $\pm$ 10 m s$^{-1}$ velocity change. The measurement of the distance from the front edge of the wedge to the point at which the wave enters the plate from the wedge (``wedge foot offset'' in Equation~\ref{velocitycalcfull}) has a large effect on the calculated wave velocity. The exact offset distance is unknown and is assumed to be the point at which the centre line of the transducer aligns with the plate surface. Varying this value (42.5 mm) raises or lowers the velocity of all results considerably ($\pm$ 1 mm = $\pm$ 35 m s$^{-1}$). The hot plate does not heat the test plate evenly, especially at distances greater than 10 cm between wedges where they overhang the edges of the hot plate. The gradient (the difference in temperature between the centre of the plate and the location of the wedges) increases with temperature. The measured velocity is monitoring the average temperature of the transmission path. The gradient has been measured by placing a number (4) of thermocouples along the transmission path, from the centre of the plate (maximum temperature) to the point at which a wave is transmitted between a wedge foot and the plate. The calculation of aluminium dispersion curves at different temperatures is based on a change in Young's modulus. This is predicted from Hopkin's formula \cite{Hopkins2012} that may not give the correct values for Aluminium 1050 H14, but Aluminium in general.
 
@@ -618,7 +629,7 @@ The theoretical effect of temperature on various Lamb wave modes in aluminium pl
 
 An experimental investigation has been carried out in order to validate theoretical predictions. Wedge transducers in a pitch-catch configuration have been used to excite the $S_0$ mode in a 1mm thick aluminium plate. The time of flight between transducers has been measured using a cross-correlation method and wave velocity calculated based on the distance between transducers. This confirms that the $S_0$ mode has been excited. The change in $S_0$ wave velocity due to temperature is in line with theoretical predictions over the range 20\si{\degreeCelsius}--100\si{\degreeCelsius} as shown in Figure~\ref{fig:result}. 
 
-It is clear that wedge transducers are not the optimum method of transmitting/receiving a wave through a nozzle guide vane at high temperatures. They cannot be permanently mounted to the structure due to the need for a liquid couplant, and their relatively large footprint would make finding a suitable mounting location a challenge. Their operation at high temperatures is limited by the wedge material, which in the case of acrylic melts at around 160\si{\degreeCelsius}. The wedge material needs to have a longitudinal wave velocity less than that of the targeted Lamb wave phase velocity, which limits the choice of material severely, mostly to plastics with low melting points. The great benefit of wedge transducers is the ability to selectively target Lamb wave modes, which reduces the complexity of data analysis compared with exciting multiple modes simultaneously. This is difficult to achieve using other transducer configurations but it may instead be possible to excite a higher order region that travels as a single wave packet. The use of PWAS transducers could allow for operation at high temperatures (assuming suitable choice of piezoelectric material) and would be relatively easy to mount to an NGV structure, having a small footprint. Another option is to couple into the structure using waveguides, distancing the transducers from the high temperature environment. Future research will investigate the temperature sensitivity of higher order modes (such as $A_1$ and $S_1$), as operating at higher frequencies can improve resolution (allowing for the detection of smaller phase shifts) and response rates. The ability to monitor wave velocity variations in multi-modal wave packets will also be considered when investigating transducer configurations suitable for higher temperature operation.
+It is clear that wedge transducers are not the optimum method of transmitting/receiving a wave through a nozzle guide vane at high temperatures. They cannot be permanently mounted to the structure due to the need for a liquid couplant, and their relatively large footprint would make finding a suitable mounting location a challenge. Their operation at high temperatures is limited by the wedge material, which in the case of acrylic melts at around 160\si{\degreeCelsius}. The wedge material needs to have a longitudinal wave velocity less than that of the targeted Lamb wave phase velocity, which limits the choice of material severely, mostly to plastics with low melting points. The great benefit of wedge transducers is the ability to selectively target Lamb wave modes, which reduces the complexity of data analysis compared with exciting multiple modes simultaneously. This is difficult to achieve using other transducer configurations but it may instead be possible to excite a higher order region that travels as a single wave packet. The use of PWAS transducers could allow for operation at high temperatures (assuming suitable choice of piezoelectric material) and would be relatively easy to mount to an NGV structure, having a small footprint, although the high temperatures are likely to make bonding difficult. Another option is to couple into the structure using waveguides, distancing the transducers from the high temperature environment. Future research will investigate the temperature sensitivity of higher order modes (such as $A_1$ and $S_1$), as operating at higher frequencies can improve resolution (allowing for the detection of smaller phase shifts) and response rates. The ability to monitor wave velocity variations in multi-modal wave packets will also be considered when investigating transducer configurations suitable for higher temperature operation.
 
 \chapter{Plan}\label{plan}
 
@@ -632,17 +643,21 @@ Prior to the 18 month confirmation review the following research has been undert
     \item Identifying a method of exciting Lamb waves in plate-like structures. This is addressed in Section~\ref{wavegen}.
     \item Understanding the effect of temperature on Lamb wave propagation. This is addressed in Section~\ref{lambwavesensing}.
     \item Verification of the theoretical temperature sensitivities of Lamb wave modes with experimental data. Measurements up to 100\si{\degreeCelsius} in an aluminium plate. This is addressed in Section~\ref{theory}.
-    \item COMSOL modelling of the system. This will allow the effect of temperature on each element of the system to be predicted. The model can be developed over time to include features such as cooling holes and other transducer configurations. This is addressed in Section~\ref{simulations}.
+    \item COMSOL modelling of the experimental test system. The model will be used in future studies. This is addressed in Section~\ref{simulations}.
 \end{itemize} 
 
+%Considering the outcome of the experimental study it has been shown that temperature can be monitored using ultrasound techniques. The next stage of the study is to investigate the effect of cooling holes on the propagation of waves, and to explore the possibility of monitoring temperature in multiple locations by analysing the reflections from a number of holes.
+
+%In order to adapt the system to nozzle guide vanes a different transducer configuration is required that can be permanently coupled to the structure, and can operate at considerably higher temperatures than the current system. As shown previously the most suitable candidate for achieving this are waveguides that can be used to distance the transducers from the high temperature environment. A transducer configuration that utilises waveguides will be modelled using COMSOL, and the suitability of the system for use on NGVs will be evaluated. Based on the outcome of this study, and time permitting, a waveguide system will be tested experimentally, in order to validate the model. %
+
+\newpage
 \section{Future plans}
 
 \begin{itemize}
-    \item The effect of plate holes on Lamb wave mode propagation can be investigated through simulation and experimentation. The ability to monitor temperature at a number of locations through the analysis of acoustic reflections can be investigated. 
-    \item Investigate the possibility of exciting a single mode in area of high dispersion (e.g. steep group velocity curve) to maximise group velocity temperature sensitivity.
-    \item To operate at higher temperatures a new transducer configuration will be required. Piezoelectric Wafer Active Sensors (PWAS) using piezoelectric materials such as YCOB or AlN (that can operate at extremely high temperatures) are a potential option. Another option is to distance the transducers away from the high temperatures using waveguides, and couple into the test structure using a system of Hertzian contact points. Both options require further investigation. 
-    \item COMSOL simulations can be used to investigate different transducer configurations. When a suitable configuration is found the response can be verified experimentally.
-    \item COMSOL simulations of the chosen transducer configuration on an NGV structure (with curved surfaces and cooling holes)
+    \item The effect of plate holes on Lamb wave mode propagation will be investigated through simulation and experimentation. The ability to monitor temperature at a number of locations through the analysis of acoustic reflections will be explored. This will begin by analysing the effect of one hole on the wave propagation of different modes, before increasing the number of holes to more accurately represent a real nozzle guide vane.
+    \item To operate at higher temperatures a new transducer configuration will be required. The most suitable option is to distance the transducers away from the high temperatures using waveguides, coupling into the test structure using a system of Hertzian contact points. COMSOL simulations will be used to investigate the potential of this method.
+    \item Depending on the outcome of the previous COMSOL study and time constraints, a waveguide system will be tested experimentally.
+    \item A journal or conference paper submission will be prepared that focuses on the COMSOL~modelling and analysis of Lamb wave propagation. 
 \end{itemize}
 
 \section{Gantt chart}
